--- a/ghp-scripts/config.toml
+++ b/ghp-scripts/config.toml
@@ -3,14 +3,13 @@ baseURL = "https://waskhar-project.github.io/"
 languageCode = "en-us"
 title = "Waskhar Project"
 theme = "hugo-theme-cactus"
-copyright = "You" # cactus will use title if copyright is not set
+copyright = "Waskhar Project"                   # cactus will use title if copyright is not set
 #disqusShortname = "example" # Used when comments is enabled. Cactus will use site title if not set
 #googleAnalytics = "UA-1234-5"
-
-
 # summaryLength = 2
 
 # Main menu which appears below site header.
+
 [[menu.main]]
 name = "Home"
 url = "/"
@@ -33,7 +32,7 @@ weight = 4
 
 [markup]
   [markup.tableOfContents]
-    endLevel = 4
+    endLevel = 3                    # 3 levels only
     ordered = false
     startLevel = 2
   [markup.highlight]
@@ -49,19 +48,19 @@ weight = 4
 
 [params]
 
-  colortheme = "classic" # dark, light, white, or classic
-  rss = true # generate rss feed. default value is false
+  colortheme = "classic"               # dark, light, white, or classic
+  rss = false                          # generate rss feed. default value is false
   googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
   showAllPostsArchive = false # default
 
   # Home page settings
   description = "Proyecto de digitalización y mejora de la trazabilidad a lo largo de la cadena de suministro de la Madera en la Amazonía Peruana usando Blockchain."
-  mainSection = "posts" # your main section
-  showAllPostsOnHomePage = true # default
-  postsOnHomePage = 5                     # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = true                     # show tags overview by default.
-  showProjectsList = false # show projects list by default (if projects data file exists).
-  projectsUrl = "https://github.com/waskhar-project" # title link for projects list
+  #mainSection = "posts"                              # your main section
+  showAllPostsOnHomePage = true                       # true: default
+  postsOnHomePage = 5                                 # this option will be ignored if showAllPostsOnHomePage is set to true
+  tagsOverview = true                                 # show tags overview by default.
+  showProjectsList = false                            # show projects list by default (if projects data file exists).
+  projectsUrl = "https://github.com/waskhar-project"  # title link for projects list
 
   # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
   dateFormat = "2006-01-02" # default
