Published content: added index as layout

--- a/ghp-scripts/config.toml
+++ b/ghp-scripts/config.toml
@@ -55,10 +55,11 @@ weight = 4
 
   # Home page settings
   description = "Proyecto de digitalización y mejora de la trazabilidad a lo largo de la cadena de suministro de la Madera en la Amazonía Peruana usando Blockchain."
-  #mainSection = "posts"                              # your main section
+  mainSection = "posts"                               # your main section - link to <site>/posts
+  mainSectionTitle = "Articles"
   showAllPostsOnHomePage = false                       # true: default
   postsOnHomePage = 5                                 # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = true                                 # show tags overview by default.
+  tagsOverview = false                                 # true:show tags overview by default.
   showProjectsList = false                            # show projects list by default (if projects data file exists).
   projectsUrl = "https://github.com/waskhar-project"  # title link for projects list
 
