--- a/ghp-scripts/config.toml
+++ b/ghp-scripts/config.toml
@@ -50,8 +50,8 @@ weight = 4
 
   colortheme = "classic"               # dark, light, white, or classic
   rss = false                          # generate rss feed. default value is false
-  googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
-  showAllPostsArchive = false # default
+  #googleAnalyticsAsync = true          # use asynchronous tracking. Synchronous tracking by default
+  showAllPostsArchive = true           # false: default
 
   # Home page settings
   description = "Proyecto de digitalización y mejora de la trazabilidad a lo largo de la cadena de suministro de la Madera en la Amazonía Peruana usando Blockchain."
