--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Print GH vars
         run: |
-          echo $github.event_name
-          echo $github.ref
-          echo $github.ref_name
-          echo $github.head_ref
-          echo $github.base_ref
+          echo ${{github.event_name}}
+          echo ${{github.ref}}
+          echo ${{github.ref_name}}
+          echo ${{github.head_ref}}
+          echo ${{github.base_ref}}
