--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -11,21 +11,26 @@ on:
     paths:
       - '.github/workflows/**'
 
-    
 jobs:
-  job_print_env_vars:
+  job_print_some_env_vars:
     runs-on: ubuntu-latest
     steps:
-      - name: List env vars on ubuntu
-        run: env
-
-      - name: List context vars
-        run: echo '${{ toJSON(github) }}'
-
-      - name: Print GH vars
+      - name: Print some GH vars
         run: |
           echo github.event_name: ${{ github.event_name }}
           echo github.ref: ${{ github.ref }}
           echo github.ref_name: ${{ github.ref_name }}
           echo github.head_ref: ${{ github.head_ref }}
           echo github.base_ref: ${{ github.base_ref }}
+
+  job_print_full_env_vars_ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+      - name: List ubuntu env vars 
+        run: env
+
+  job_print_full_env_vars_github:
+    runs-on: ubuntu-latest
+    steps:
+      - name: List gh env vars 
+        run: echo '${{ toJSON(github) }}'
